# cpp_arcade

./: .gitignore  CMakeLists.txt  Makefile  link.scores.arcade  prepareLib.sh
.scores.arcade/: tests1  tests2
assets/nibbler/: map_2.nibbler
assets/nibbler/map/: map_0.nibbler  map_1.nibbler
assets/solarfox/map/: map_1.solarfox  map_3.solarfox
assets/wolf3d/map/: map_2.wolf3d
doc/: LoaderScheme.txt  arcade_doc_long.txt  arcade_doc_short.txt  doxygen_log.txt
src/: main.cpp  main.hpp
src/core/: main.cpp
src/core/corebuild/: CoreBuild.cpp  CoreBuild.hpp  CoreClock.cpp  CoreClock.hpp
src/core/loader/: GameLoader.cpp  GameLoader.hpp  LibLoader.cpp  LibLoader.hpp
src/core/shape/: AShape.cpp  AShape.hpp  IShape.hpp  ShapeCircle.cpp  ShapeCircle.hpp  ShapeLoader.cpp  ShapeLoader.hpp  ShapeRect.cpp  ShapeRect.hpp  ShapeText.cpp  ShapeText.hpp
src/events/: EventHandler.cpp  EventHandler.hpp  GameEvent.cpp  GameEvent.hpp  KeyEvent.cpp  KeyEvent.hpp  MouseEvent.cpp  MouseEvent.hpp
src/exception/: Exception.cpp  Exception.gcda  Exception.gcno  Exception.hpp
src/games/: BasicGame.cpp  BasicGame.hpp  IGame.hpp  ScoreHandler.cpp  ScoreHandler.hpp  SystemGame.cpp  SystemGame.hpp
src/games/BasicGame/: BasicGame.cpp  BasicGame.hpp  extern.cpp
src/games/Controller/: IController.hpp  PlayerController.cpp  PlayerController.hpp  SystemController.hpp
src/games/Menu/: MainMenu.cpp  MainMenu.hpp
src/games/Snake/: MapManager.cpp  MapManager.hpp  Snake.cpp  Snake.hpp  SnakeGame.cpp  SnakeGame.hpp  extern.cpp
src/games/SolarFox/: AMissile.cpp  AMissile.hpp  AObject.cpp  AObject.hpp  BasicMob.cpp  BasicMob.hpp  MapManager.cpp  MapManager.hpp  Monster.cpp  Monster.hpp  MonsterMissile.cpp  MonsterMissile.hpp  Ship.cpp  Ship.hpp  ShipMissile.cpp  ShipMissile.hpp  SolarFoxGame.cpp  SolarFoxGame.hpp  extern.cpp
src/games/Tamagotchi/: Tamago.cpp  Tamago.hpp  TamagotchiGame.cpp  TamagotchiGame.hpp  extern.cpp
src/games/Wolf3D/: Map.cpp  Map.hpp  MapManager.cpp  MapManager.hpp  Player.cpp  Player.hpp  Ray.cpp  Ray.hpp  WolfGame.cpp  WolfGame.hpp  extern.cpp
src/games/utils/: IGameObject.hpp  IObject.hpp  ScoreHandler.cpp  ScoreHandler.hpp
src/games/utils/Animated/: AnimatedContainer.cpp  AnimatedContainer.hpp  AnimatedObject.cpp  AnimatedObject.hpp  AnimatedShape.cpp  AnimatedShape.hpp  AnimatedTexture.cpp  AnimatedTexture.hpp
src/games/utils/Controller/: PlayerController.cpp  PlayerController.hpp  SystemController.cpp  SystemController.hpp
src/games/utils/mapReader/: MapReader.cpp  MapReader.hpp
src/graphic/: ADraw.cpp  ADraw.hpp  AGraphic.cpp  AGraphic.hpp  AShapeLoader.cpp  AShapeLoader.hpp  IDraw.hpp  IDrawLoader.hpp  IGraphic.hpp  IMainWindow.hpp  IShape.hpp  IShapeLoader.hpp
src/graphic/SDL/: SDLGraphic.cpp  SDLGraphic.hpp  SDLMainWindow.cpp  SDLMainWindow.hpp  SDLShape.cpp  SDLShape.hpp  SDLShapeLoader.cpp  SDLShapeLoader.hpp  extern.cpp
src/graphic/SDL/draw/: SDLShapeCircle.cpp  SDLShapeCircle.hpp  SDLShapeRect.cpp  SDLShapeRect.hpp  SDLShapeText.cpp  SDLShapeText.hpp
src/graphic/core/shape/: IShape.cpp  IShape.hpp  ShapeCircle.cpp  ShapeCircle.hpp
src/graphic/glu/: GLMainWindow.cpp  GLMainWindow.hpp
src/graphic/libcaca/: CacaGraphic.cpp  CacaGraphic.hpp  CacaImage.cpp  CacaImage.hpp  CacaMainWindow.cpp  CacaMainWindow.hpp  CacaShape.cpp  CacaShape.hpp  CacaShapeLoader.cpp  CacaShapeLoader.hpp  extern.cpp
src/graphic/libcaca/draw/: CacaShapeCircle.cpp  CacaShapeCircle.hpp  CacaShapeRect.cpp  CacaShapeRect.hpp  CacaShapeText.cpp  CacaShapeText.hpp
src/graphic/sfml/: SFDraw.cpp  SFDraw.hpp  SFDrawLoader.cpp  SFDrawLoader.hpp  SFGraphic.cpp  SFGraphic.hpp  SFMainWindow.cpp  SFMainWindow.hpp  SFShape.cpp  SFShape.hpp  SFShapeLoader.cpp  SFShapeLoader.hpp  extern.cpp  operator.cpp  operator.hpp
src/graphic/sfml/draw/: SFDraw.cpp  SFDraw.hpp  SFDrawCircle.cpp  SFDrawCircle.hpp  SFDrawLoader.cpp  SFDrawLoader.hpp  SFDrawRect.cpp  SFDrawRect.hpp  SFDrawText.cpp  SFDrawText.hpp  SFShapeCircle.cpp  SFShapeCircle.hpp  SFShapeRect.cpp  SFShapeRect.hpp  SFShapeText.cpp  SFShapeText.hpp
src/graphic/shape/: AShape.cpp  AShape.hpp  ShapeCircle.cpp  ShapeCircle.hpp  ShapeContainer.cpp  ShapeContainer.hpp  ShapeRect.cpp  ShapeRect.hpp  ShapeText.cpp  ShapeText.hpp
src/std/: Color.cpp  Color.hpp  Direction.cpp  Direction.hpp  DirectoryReader.cpp  DirectoryReader.hpp  Rect.cpp  Rect.hpp  Texture.cpp  Texture.hpp  Vertex.cpp  Vertex.hpp
tests/: exception.cpp  test_basic_game.cpp  test_basic_loader.cpp  test_basic_loader_graphic.cpp  test_sfml_shape.cpp  tests_basic_loader_game.cpp
tests/core/corebuild/: coreclock.cpp
tests/core/loader/: gameloader.cpp  libloader.cpp
tests/events/: keyevent.cpp  mouseevent.cpp
tests/games/: scorehandler.cpp
tests/games/utils/: scorehandler.cpp
tests/graphics/shape/: circle.cpp  rect.cpp  text.cpp
tests/mainTests/: test_basic_game.cpp  test_basic_loader_graphic.cpp  test_sfml_shape.cpp  tests_basic_loader_game.cpp
tests/std/: color.cpp  directoryreader.cpp  rectd.cpp  rectf.cpp  recti.cpp  rects.cpp  texture.cpp  vertd.cpp  vertf.cpp  verti.cpp  verts.cpp
